--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -15,6 +15,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
+      "@components/*": ["./lib/components/*"],
+      "@utils/*": ["./lib/utils/*"],
+      "@models/*": ["./lib/models/*"],
       "@/*": ["./*"]
     }
   },
